--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Shivani Mishra</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,47 +12,52 @@
   </head>
   <body>
      <div class="top-container">
-       <img class="top-cloud" src="images\cloud.png" alt="cloud's image">
+       <img class="top-cloud" src="cloud.png" alt="cloud's image">
        <h1>I'm Shivani.</h1>
        <h2>a <span class="pro">pro</span>grammar.</h2>
-        <img class="bottom-cloud" src="images\cloud.png" alt="cloud's image">
-         <img  src="images\pinktree.png" alt="tree's image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud's image">
+         <img  src="pinktree.png" alt="tree's image">
      </div>
      <div class="middle-container">
        <div class="profile">
-         <img src="images\myProfileimg.png" alt="profile pic">
+         <img src="myProfileimg.png" alt="profile pic">
          <h2>Hello.</h2>
-         <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+         <p class="intro"><b>I am a FULL-STACK WEB DEVELOPER.Coding helps me to express things that I can imagine. I am very passionate about solving real-world problems with the help of programming.</b></p>
        </div>
        <hr>
        <div class="skills">
-         <h2>My Skills.</h2>
+         <h2>What I love to do.</h2>
          <div class="skill-row">
-           <img class="tool"src="images\skill1.png" alt="skill pic1">
-           <h3>Lorem & Ipsum</h3>
-           <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+           <img class="tool"src="skill1.png" alt="skill pic1">
+           <h3>Ethical Hacking</h3>
+           <p><b>I really like to find the weak points or loopholes in a computer, web applications or network and reports them to the organization.</b></p>
          </div>
          <div class="skill-row">
-           <img class="machine" src="images\skill2.png" alt="skill pic2">
-           <h3>Lorem Ipsum Dolor</h3>
-           <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <img class="tool"src="skill1.png" alt="skill pic1">
+           <h3>Software development</h3>
+           <p><b>Building and deploying stuffs<b></p>
+         </div>
+         <div class="skill-row">
+           <img class="machine" src="skill2.png" alt="skill pic2">
+           <h3>Game Development</h3>
+           <p><b>In free time, I prefer building up new games.One of them is</b><a href="https://play.unity.com/mg/other/webgl2-cv"><b>a 2D game</b></a></p>
+
          </div>
        </div>
        <hr>
        <div class="contact-me">
          <h2>Get In Touch</h2>
-         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-         <p class="contact-msg">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-         <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+         <h3><b>I’m currently available for freelance work.</b></h3> 
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
        </div>
      </div>
 
 
      <div class="bottom-container">
-       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-       <p class="copyright-msg">© Name Surname.</p>
+       <a class="footer-link" href="https://www.linkedin.com/in/shivani-mishra-659988227/">LinkedIn</a>
+       
+
+       <p class="copyright-msg">© 2022 Shivani Mishra. All rights reserved.</p>
      </div>
 
   </body>
